# t_project

./: README.md  netopeer_cmd.txt
project/: commutator.yang  main.cpp  meson.build  netopeer-run  network_emul.cpp  output-file-name.html  qrun  runbuild
project/MobileClient/: meson.build
project/MobileClient/api/: INetConfAgent.hpp
project/MobileClient/hpp/: MobileClient.hpp  NetConfAgent.hpp
project/MobileClient/include/: NetConfAgent.hpp
project/MobileClient/source/: MobileClient.cpp  NetConfAgent.cpp
project/test/: meson.build
project/test/mock/: NetConfAgentMock.hpp
project/test/source/: MobileClientTest.cpp
project/utils/: meson.build
project/utils/hpp/: PrintInterface.hpp  StringInterface.hpp
project/utils/source/: PrintInterface.cpp  StringInterface.cpp
task1/: .gitignore  meson.build
task1/abstract_factory/: meson.build
task2/: .gitignore  comm.yang  commutator.yang  config-acm.readme  model.yang
